# gtfs-realtime-bindings

./: README.md  UPDATING.md  tfnsw-vehicle.proto  transit-extensions.proto
agency-extensions/: oba-alerts.proto
nodejs/: README.md  UPDATING.md  gtfs-realtime.js  gtfs-realtime.mjs  package-lock.json  package.json  types.d.ts
python/: UPDATING.md  setup.py
python/google/transit/: gtfs_realtime_pb2.py  transit_extensions_pb2.py
python/google/transit/agency_extensions/: mtas_realtime_pb2.py  tfnsw_vehicle_pb2.py
python/google/transit/gtfs_spec/gtfs_realtime/proto/: gtfs_realtime_pb2.py
python/tests/: test_gtfs_realtime_pb2.py
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/crates/gtfsrt/: Cargo.toml
rust/crates/gtfsrt-bindings/: Cargo.toml
rust/crates/gtfsrt-bindings/gtfs-spec-no-extensions/gtfs-realtime/proto/: gtfs-realtime.proto
rust/crates/gtfsrt-printer/: Cargo.toml  README.md  TripUpdates_prostfail.pb
rust/crates/gtfsrt-printer/src/: config.rs  filters.rs  main.rs
rust/crates/gtfsrt/examples/: load.rs
rust/crates/gtfsrt/src/: lib.rs
rust/examples/: load.rs
rust/gtfs-spec-no-extensions/gtfs-realtime/proto/: gtfs-realtime.proto
rust/prebuilt/: transit_realtime.rs  transit_realtime.serde.rs
rust/printer/: Cargo.toml  README.md
rust/printer/src/: config.rs  filters.rs  main.rs
rust/src/: lib.rs
rust/tests/fixtures/input/: stm_trip_updates_with_extensions.pb
