[package]
name = "gtfsrt-bindings"
version = "0.1.0"
edition = "2021"
description = "bindings for gtfs-realtime"
publish = ["transit"]

[package.metadata.workspaces]
independent = true

[dependencies]
pbjson = "0.5.1"
pbjson-types = "0.5.1"
serde = { version = "1.0.164" }
prost = "0.11.9"

[build-dependencies]
pbjson-build = "0.5.1"
prost-build = "0.11.9"
