[package]
name = "rtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-realtime-bindings-transit = { path = "../" }
atty = "0.2.14"
clap = { version = "3.0.14", features = ["derive"] }
anyhow = "1.0.53"
ureq = "2.4.0"
