[package]
name = "rtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfs-realtime-bindings-transit = { path = "../" }
atty = "0.2.14"
clap = { version = "3.1.17", features = ["derive"] }
anyhow = "1.0.57"
reqwest = { version = "0.11.10", features = ["blocking"] }
