[package]
name = "rtx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfsrt = { path = "../gtfsrt" }
clap = { version = "4.3.3", features = ["derive"] }
anyhow = "1.0.58"
reqwest = { version = "0.11.18", features = ["blocking"] }
chrono = "0.4.26"
