[package]
name = "gtfsrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtfsrt-bindings = { path = "../gtfsrt-bindings" }

prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }


[dev-dependencies]
assert-json-diff = "2.0.2"
